# AFP

./: .gitignore  backtest_logs.json  backtest_portfolios.csv  backtest_portfolios.json  backtest_portfolios_tc0.01_vc0_vl22_rs1000.0.csv  backtest_portfolios_tc0.01_vc0_vl22_rs1500.0.csv  backtest_portfolios_tc0.01_vc0_vl22_rs500.0.csv  eda.ipynb  pyproject.toml  run_all.py
checkpoints/finetuned/: actor.pt  critic1.pt  critic2.pt
checkpoints/pretrained/: actor.pt  critic1.pt  critic2.pt  portfolios_used.json  pretrain_logs.json  target1.pt  target2.pt
data/: portfolios.json
rl/: __init__.py
rl/algo/: __init__.py  evaluator.py  replay_buffer.py  sac_core.py  trainer.py
rl/cli/: backtest.py  pretrain.py  walk_forward_validation.py
rl/configs/: __init__.py  env.yaml  eval.yaml  model.yaml  sac_config.py  train.yaml
rl/envs/: __init__.py  stock_env.py
rl/models/: __init__.py  rewards.py  transformer_actor_critic.py  transformer_policy.py
rl/utils/: __init__.py  data_loader.py  data_processing.py  seeding.py
tests/: __init__.py
tests/unit/: test_env.py  test_models.py  test_per_factor_masks.py
