[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-project"
version = "0.1.0"
description = "Reinforcement Learning for Portfolio Management"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyarrow>=10.0.0",
    "gymnasium>=0.28.0",
    "hydra-core>=1.2.0",
    "omegaconf>=2.2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
]

[project.scripts]
rl-train = "rl.cli.train:main"
rl-eval = "rl.cli.evaluate:main"
rl-prepare-data = "rl.cli.prepare_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rl*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
